tests/NormalTests/paczka1/fuzzy1/84858380.err
Error in line 2: d2rBpwzl9 S408 3,5
Error in line 10: mvm0 S408 234,1
Error in line 3: d2rBpwzl9 A554 73,2
Error in line 26: d2rBpwzl9 A554 25,3
Error in line 27: d2rBpwzl9 S408 61,8
Error in line 31: mvm0 S408 `8,4
